# servo

./: .clang-format  .clippy.toml  .editorconfig  .flake8  .gdb_history  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hgignore  .mailmap  .python-version  .taskcluster.yml  .travis.yml  AGENTS.md  CLOBBER  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.lock.bak  Cargo.lock.rej  Cargo.toml  Dockerfile  GETTING_STARTED.md  HACKING_QUICKSTART.md  Info.plist  LICENSE  LICENSE_WHATWG_SPECS  Makefile.backup  Makefile.in  ORGANIZATION.md  PULL_REQUEST_TEMPLATE.md  README.md  README_UDS.md  SECURITY.md  STYLE_GUIDE.md  SetValueCurve-exceptions  TEST_COVERAGE_ANALYSIS.md  TRANSPORT_URL_IMPLEMENTATION.md  UDS_INTEGRATION_PROGRESS.md  (+88 more)
components/allocator/: Cargo.toml  lib.rs  tracking.rs
components/app_units/: Cargo.toml  app_unit.rs
components/app_units/src/: lib.rs
components/atoms/: Cargo.toml  build.rs  lib.rs  static_atoms.txt
components/background_hang_monitor/: Cargo.toml  background_hang_monitor.rs  lib.rs  sampler.rs  sampler_backtrace.rs  sampler_linux.rs  sampler_mac.rs  sampler_windows.rs
components/background_hang_monitor/tests/: hang_monitor_tests.rs
components/bluetooth/: Cargo.toml  README.md  adapter.rs  bluetooth.rs  embedder.rs  empty.rs  lib.rs  macros.rs  test.rs
components/bluetooth_traits/: Cargo.toml  blocklist.rs  lib.rs  scanfilter.rs
components/canvas/: Cargo.toml  azure_backend.rs  backend.rs  build.rs  canvas_data.rs  canvas_msg.rs  canvas_msg.rs.orig  canvas_paint_task.rs  canvas_paint_task.rs.orig  canvas_paint_thread.rs  canvas_render_task.rs  gl_context.rs  lib.rs  lib.rs.orig  media_thread.rs  peniko_conversions.rs  premultiplytable.rs  raqote_backend.rs  vello_backend.rs  vello_cpu_backend.rs  webgl_limits.rs  webgl_paint_task.rs  webgl_paint_task.rs.orig  webgl_paint_thread.rs  webgl_thread.rs  webxr.rs
components/canvas/media_mode/: inprocess.rs  mod.rs
components/canvas/webgl_mode/: inprocess.rs  mod.rs
components/canvas_traits/: Cargo.toml  canvas.rs  lib.rs  media.rs  webgl.rs
components/canvas_traits/media_channel/: mod.rs
components/canvas_traits/webgl_channel/: ipc.rs  mod.rs  mpsc.rs
components/cdp/: Cargo.toml  ipc.rs  lib.rs
components/channel/: Cargo.toml  lib.rs
components/channel/tests/: disconnect.rs
components/compositing/: .#compositor.rs  Cargo.toml  browser.rs  buffer_map.rs  build.rs  compositor.rs  compositor_data.rs  compositor_layer.rs  compositor_task.rs  compositor_thread.rs  constellation.rs  content_process.rs  delayed_composition.rs  events.rs  gl.rs  headless.rs  largest_contentful_paint.rs  largest_contentful_paint_calculator.rs  lib.rs  main_thread.rs  paint.rs  painter.rs  pinch_zoom.rs  pipeline.rs  pipeline_details.rs  refresh_driver.rs  render_notifier.rs  sandboxing.rs  screenshot.rs  scrolling.md  scrolling.rs  surface_map.rs  timer_scheduler.rs  touch.rs  tracing.rs  webrender_external_images.rs  webview.rs  webview_manager.rs  webview_renderer.rs  wheel_fling.rs  (+1 more)
components/compositing/platform/common/: glfw_windowing.rs  glut_windowing.rs
components/compositing_traits/: Cargo.toml  constellation_msg.rs  lib.rs
components/config/: Cargo.toml  basedir.rs  lib.rs  opts.rs  pref_util.rs  prefs.rs  resource_files.rs
components/config/macro/: Cargo.toml  lib.rs
components/config/tests/: opts.rs  prefs.rs
components/config_plugins/: Cargo.toml  lib.rs  parse.rs
components/constellation/: Cargo.toml  background_hang_monitor.rs  broadcastchannel.rs  browser.rs  browsingcontext.rs  constellation.rs  constellation_webview.rs  embedder.rs  event_loop.rs  frame.rs  lib.rs  logging.rs  network_listener.rs  pipeline.rs  process_manager.rs  sandboxing.rs  serviceworker.rs  session_history.rs  timer_scheduler.rs  tracing.rs  webview.rs  webview_manager.rs
components/constellation/tests/: hang_monitor_tests.rs
components/default-resources/: Cargo.toml  lib.rs
components/default-resources/resources/: debugger.js  gatt_blocklist.txt  json-viewer.html  neterror.html  pdf-viewer.html
components/deny_public_fields/: Cargo.toml  lib.rs
components/derive_common/: Cargo.toml  cg.rs  lib.rs
components/devtools/: Cargo.toml  actor.rs  build.rs  id.rs  lib.rs  network_handler.rs  protocol.rs  resource.rs
components/devtools/actors/: blackboxing.rs  breakpoint.rs  browsing_context.rs  configuration.rs  console.rs  css_properties.rs  device.rs  emulation.rs  environment.rs  frame.rs  framerate.rs  inspector.rs  long_string.rs  memory.rs  network_event.rs  object.rs  pause.rs  performance.rs  preference.rs  process.rs  profiler.rs  property_iterator.rs  reflow.rs  root.rs  source.rs  stylesheets.rs  symbol_iterator.rs  tab.rs  thread.rs  timeline.rs  watcher.rs  worker.rs
components/devtools/actors/console/: autocomplete_parsing.rs
components/devtools/actors/inspector/: accesibility.rs  accessibility.rs  accessible_walker.rs  css_properties.rs  highlighter.rs  layout.rs  node.rs  page_style.rs  simulator.rs  style_rule.rs  walker.rs
components/devtools/actors/watcher/: network_parent.rs  target_configuration.rs  thread_configuration.rs
components/devtools_traits/: Cargo.toml  lib.rs
components/dom_struct/: Cargo.toml  domobject.rs  lib.rs
components/domobject_derive/: Cargo.toml  lib.rs
components/embedder_traits/: Cargo.toml  build.rs  lib.rs  resources.rs
components/event_tracing/: Cargo.toml  lib.rs
components/fallible/: Cargo.toml  lib.rs
components/fonts/: Cargo.toml  font.rs  font_cache_thread.rs  font_context.rs  font_feature_values.rs  font_store.rs  font_template.rs  glyph.rs  lib.rs  shaper.rs  system_font_service.rs
components/fonts/platform/: mod.rs
components/fonts/platform/freetype/: face.rs  font.rs  font_list.rs  freetype_errors.rs  freetype_face.rs  freetype_face_helpers.rs  freetype_font_table.rs  freetype_truetype_unicode_ranges.rs  mod.rs  (+2 more)
components/fonts/shapers/: both.rs  harfbuzz.rs  harfrust.rs  mod.rs
components/fonts/tests/: font.rs  font_context.rs  font_template.rs
components/geolocation/: Cargo.toml  lib.rs
(+326058 files in other folders)
