#!/bin/bash

SRCDIR="$(cd $(dirname $0) && pwd)"
sed "s#%VPATH%#${SRCDIR}#" ${SRCDIR}/Makefile.in > Makefile

mkdir -p src/ragel || exit $?
mkdir -p src/harfbuzz || exit $?
mkdir -p src/mozjs || exit $?
mkdir -p src/rust-harfbuzz || exit $?
mkdir -p src/rust-opengles || exit $?
mkdir -p src/rust-mozjs || exit $?
mkdir -p src/rust-sdl || exit $?
mkdir -p src/rust-azure || exit $?
mkdir -p src/rust-cocoa || exit $?
mkdir -p src/rust-stb-image || exit $?
mkdir -p src/rust-geom || exit $?
mkdir -p src/rust-glut || exit $?
mkdir -p src/rust-layers || exit $?

(cd src/ragel && sh ${SRCDIR}/src/ragel/configure) || exit $?
(cd src/harfbuzz && sh ${SRCDIR}/src/harfbuzz/configure --enable-static) || exit $?
(cd src/mozjs && sh ${SRCDIR}/src/mozjs/js/src/configure) || exit $?
(cd src/rust-opengles && sh ${SRCDIR}/src/rust-opengles/configure) || exit $?
(cd src/rust-harfbuzz && sh ${SRCDIR}/src/rust-harfbuzz/configure) || exit $?
(cd src/rust-mozjs && sh ${SRCDIR}/src/rust-mozjs/configure) || exit $?
(cd src/rust-sdl && sh ${SRCDIR}/src/rust-sdl/configure) || exit $?
(cd src/rust-azure && sh ${SRCDIR}/src/rust-azure/configure) || exit $?
(cd src/rust-cocoa && sh ${SRCDIR}/src/rust-cocoa/configure) || exit $?
(cd src/rust-stb-image && sh ${SRCDIR}/src/rust-stb-image/configure) || exit $?
(cd src/rust-geom && sh ${SRCDIR}/src/rust-geom/configure) || exit $?
(cd src/rust-glut && sh ${SRCDIR}/src/rust-glut/configure) || exit $?
(cd src/rust-layers && sh ${SRCDIR}/src/rust-layers/configure) || exit $?

