#!/bin/bash

SRCDIR="$(cd $(dirname $0) && pwd)"
sed "s#%VPATH%#${SRCDIR}#" ${SRCDIR}/Makefile.in > Makefile

mkdir -p src/mozjs || exit $?
mkdir -p src/rust-harfbuzz || exit $?
mkdir -p src/rust-opengles || exit $?
mkdir -p src/rust-mozjs || exit $?
mkdir -p src/rust-azure || exit $?
mkdir -p src/rust-cocoa || exit $?
mkdir -p src/rust-stb-image || exit $?
mkdir -p src/rust-geom || exit $?
mkdir -p src/rust-glut || exit $?
mkdir -p src/rust-layers || exit $?
mkdir -p src/rust-http-client || exit $?
mkdir -p src/libparserutils || exit $?
mkdir -p src/libhubbub || exit $?
mkdir -p src/servo-sandbox || exit $?
mkdir -p src/rust-hubbub || exit $?

mkdir -p src/test/ref || exit $?

(cd src/mozjs && sh ${SRCDIR}/src/mozjs/js/src/configure) || exit $?
(cd src/rust-opengles && sh ${SRCDIR}/src/rust-opengles/configure) || exit $?
(cd src/rust-harfbuzz && sh ${SRCDIR}/src/rust-harfbuzz/configure) || exit $?
(cd src/rust-mozjs && sh ${SRCDIR}/src/rust-mozjs/configure) || exit $?
(cd src/rust-azure && sh ${SRCDIR}/src/rust-azure/configure) || exit $?
(cd src/rust-cocoa && sh ${SRCDIR}/src/rust-cocoa/configure) || exit $?
(cd src/rust-stb-image && sh ${SRCDIR}/src/rust-stb-image/configure) || exit $?
(cd src/rust-geom && sh ${SRCDIR}/src/rust-geom/configure) || exit $?
(cd src/rust-glut && sh ${SRCDIR}/src/rust-glut/configure) || exit $?
(cd src/rust-layers && sh ${SRCDIR}/src/rust-layers/configure) || exit $?
(cd src/rust-http-client && sh ${SRCDIR}/src/rust-http-client/configure) || exit $?
(cd src/libparserutils && sh ${SRCDIR}/src/libparserutils/configure) || exit $?
(cd src/libhubbub && sh ${SRCDIR}/src/libhubbub/configure) || exit $?
(cd src/servo-sandbox && sh ${SRCDIR}/src/servo-sandbox/configure) || exit $?
(cd src/rust-hubbub && sh ${SRCDIR}/src/rust-hubbub/configure) || exit $?
