[project]
name = "servo"
version = "0.0.1"
description = "Servo is a prototype web browser engine written in the Rust language. It is currently developed on 64-bit macOS, 64-bit Linux, 64-bit Windows, 64-bit OpenHarmony, and Android."
readme = "README.md"
dependencies = []
requires-python = ">=3.11"

[tool.uv]
native-tls = true

[tool.ruff]
line-length = 120
extend-exclude = [
    # temporary local files
    "target/**",
    "__pycache__/**",
    "python/_venv*/**",
    # upstream
    "third_party/**",
    "python/mach/**",
    "components/**",
    "tests/**",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
]
ignore = [
    # Trailing whitespace; the standard tidy process will enforce no trailing whitespace
    "W291",
    # 80 character line length; the standard tidy process will enforce line length
    "E501",
]
